gccida/g0/noce_get_alt_condition
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_get_alt_condition/src/ifcvt.c:1619:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+74h] [rbp-Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_get_alt_condition/src/ifcvt.c:1630:13: error: expected identifier or '('
 struct set = pc_set( if_info->jump); 
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_get_alt_condition/src/ifcvt.c:1633:67: error: invalid operands to binary expression ('uint64' (aka 'unsigned long long') and 'struct rtx_def')
&& *( _QWORD *)( *( _QWORD *)( *( _QWORD *)&set[1] + 24LL) + 8LL) == if_info->jump[4]; 
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^  ~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_get_alt_condition/src/ifcvt.c:1639:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op_b = ( rtx)if_info->cond[1]; 
             ^~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_get_alt_condition/src/ifcvt.c:1640:19: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
prev_insn = ( rtx)if_info->cond_earliest[1]; 
                  ^~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_get_alt_condition/src/ifcvt.c:1667:32: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
desired_val.rtwint = ( __int64)target->fld[0]; 
                               ^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_get_alt_condition/src/ifcvt.c:1702:93: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
if ( code == *( _WORD *)if_info->cond && op_a == if_info->cond->fld[0].rtx && op_b == ( rtx)if_info->cond[1] ) 
                                                                                            ^~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_get_alt_condition/src/ifcvt.c:1708:61: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( insn = if_info->jump; insn != *earliest; insn = ( rtx)insn[1] ) 
                                                            ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_get_alt_condition/src/ifcvt.c:1730:34: error: use of undeclared identifier 'machine_mode'
result = gen_rtx_fmt_ee( code, ( machine_mode)*( ( unsigned __int8 *)cond + 2), op_a, op_b); 
                                 ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_get_alt_condition/src/obj/ifcvt.o] Error 1
